replay of compilations would help with debugging

XMLWordPrintable

    • b10

        We're often presented with cases where a crash in the compiler isn't reproducible either because of rarity or because of lack of access to a test bed but we often have a core file from the crash. in those cases it would be useful to be able to replay a compile given the class files and some description of the state of the compiler interface at the point of a crash. This can be recovered from a core file using the serviceability agent or could be dumped by the JVM when it crashes.

              Assignee:
              Yumin Qi
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: